# mimir

./: .coderabbit.yaml  .env.example  .gitignore  .lintstagedrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  SECURITY.md  biome.json  docker-compose.prod.yml  hermesh_validation.agent.final.md  manual_check.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  decision.md  feature_request.yml  task.yml
.github/workflows/: backup-restore-test.yml  ci.yml  codeql.yml  dependency-review.yml  docker-build.yml  security.yml  upstream-hermes-check.yml
apps/api/: .dockerignore  AGENTS.md  drizzle.config.ts  openapi.json  package.json  vitest.config.ts  vitest.integration.config.ts
apps/extension/: package.json  tsconfig.json
apps/web/: .dockerignore  AGENTS.md  design.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
docs/: DESIGN.md  explanation.md  ui-design-prompts.md
docs/adr/: 0015-audit-log-semantics-under-memory-branching.md  0016-classifier-confidence-and-conservative-fallback.md  0017-mimir-hermes-invocation-via-acp.md  (+9 more)
infra/: AGENTS.md  docker-compose.yml
scripts/: agent-install.sh  backup.sh  check-contract-drift.sh  enroll-node.sh  generate-python-contracts.py  heartbeat.sh  hermes-release-check.sh  restore-test.sh  setup-mimir-local.sh  ssh-ca-init.sh  ssh-ca-rotate.sh
services/: AGENTS.md
(+682 files in other folders)
