[project]
name = "mimir-services"
version = "0.0.1"
description = "Python workers for the Mimir mesh"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]

[tool.uv.workspace]
members = ["services/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
