[project]
name = "mimir-services"
version = "0.0.1"
description = "Python workers for the Mimir mesh"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "datamodel-code-generator>=0.25.0",
]

[tool.uv.workspace]
members = ["services/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
